syntax="proto3";

package com.gxf.udp.proto;

option java_outer_classname = "UDPClientObject_Pb";

message UDPClientObject{
    int32 sessionID = 1;
    RequestCommand command = 2;
    bytes params = 3;
}

//客户端发出的请求类型
enum RequestCommand{
    //web command
    CMD_executeShell = 0;
    CMD_runInstance = 1;
    CMD_runSentinel = 2;
    CMD_runRedisCommand = 3;
    CMD_isPortUsed = 4;
    CMD_createRemoteFile = 5;
    CMD_startRedisInstanceAtPort = 6;

    CMD_reportData = 7;

    //client command
    CMD_CLIENT_reportData = 8;
    CMD_CLIENT_getAppInfoByKey = 9;

    //monitor command
    CMD_MONITOR_getMachineInfo = 10;
}